--- a/index.html
+++ b/index.html
@@ -3,11 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Didlydoo</title>
   </head>
   <body>
+    <header>
+      <h1>Didlydoo</h1>
+      <section>
+        <button>Add an event</button>
+      </section>
+    </header>
+    <main>
+      <section class="event">
+        <h2 class="event__name">Anniversaire de Robin</h2>
+        <p class="event__description">Venez faire la fête , victuailles a volontée.</p>
+      </section>
+      <table>
+        <thead>
+          <tr>
+            <th colspan="2">The table header</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>The table body</td>
+            <td>with two columns</td>
+          </tr>
+        </tbody>
+      </table>
+      
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
+  </main>
   </body>
 </html>
