--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Didlydoo</title>
-  <script defer type="module" src="/main.js"></script>
+  <script defer type="module" src="/script.js"></script>
 </head>
 
 <body>
@@ -66,7 +66,6 @@
                 <th>date 1</th>
                 <th>date 2</th>
                 <th>date 3</th>
-           
 
               </tr>
             </thead>
