--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Didlydoo</title>
-  <script defer type="module" src="/script.js"></script>
+  <script defer type="module" src="/main.js"></script>
 </head>
 
 <body>
@@ -38,7 +38,7 @@
       </div>
 
 
-      <button class="form__submit-button">Submit</button>
+      <button class="form__submit">Submit</button>
     </form>
   </header>
 
